home-k8s/adguard/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
spec:
  tls:
    - hosts:
        - adguard.sigurs.io
  rules:
    - host: adguard.sigurs.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: adguard-http
              port:
                name: http-webui
